# xafacamins

./: .gitignore  app.py  pyproject.toml  requirements.txt  socis.xlsx  xafacamins.db
.streamlit/: secrets.toml  secrets.toml.example
